<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

  <ImageView
      android:id="@+id/ivTest"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="10dp"
      android:adjustViewBounds="true"
      android:contentDescription="@string/icono" />

  <Button
      android:id="@+id/btCharacters"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/characters"
      android:textSize="20sp"
      android:layout_margin="10dp"/>

  <Button
      android:id="@+id/btPlaces"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/places"
      android:textSize="20sp"
      android:layout_margin="10dp"/>



  <Button
      android:id="@+id/btEpisodes"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/episodes"
      android:textSize="20sp"
      android:layout_margin="10dp"/>

  <Button
      android:id="@+id/btFavorites"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/favorites"
      android:textSize="20sp"
      android:layout_margin="10dp"/>


</LinearLayout>