<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ivAvatar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <ImageView
                android:id="@+id/ivGender"
                android:src="@mipmap/icmaledalexd_foreground"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>
            <ImageView
                android:id="@+id/ivStatus"
                android:src="@mipmap/icdead_foreground"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>

        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/text_species_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/tvSpecies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_species"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <Button
            android:id="@+id/btSave"
            android:layout_marginTop="20dp"
            style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_favorites" />
    </LinearLayout>


</LinearLayout>